login page and sign out done

--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -16,7 +16,8 @@
 }
 
 .signUp-button {
-  margin: 50px;
+  margin-top: 50px;
+  margin-bottom: 30px;
   background-color: red;
   width: 300px;
   height: 60px;
