--- a/src/Components/Perches/Purchase.css
+++ b/src/Components/Perches/Purchase.css
@@ -1,6 +1,6 @@
 .style {
-  margin-left: 400px;
-  width: 1000px;
+  margin-left: 150px;
+  width: 600px;
   height: 500px;
   margin-top: 50px;
   margin-bottom: 50px;
@@ -8,4 +8,19 @@
 
 .div-style {
   justify-content: center;
+}
+.input-fil {
+  margin-left: 200px;
+  background-color: rgb(244, 245, 245);
+  width: 500px;
+  height: 500px;
+}
+
+.input-in {
+  width: 400px;
+  height: 50px;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px 10px rgba(250, 250, 250, 0.233);
 }
